all page privacya and term and font style

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #0c0c0c;
   background-color: #ffffff;
   overflow-x: hidden;
