--- a/css/style.css
+++ b/css/style.css
@@ -147,16 +147,17 @@ a:focus {
 
 .sub_page .hero_area {
   min-height: auto;
-  background: linear-gradient(130deg, #231a6f, #0f054c);
+  /* background: linear-gradient(130deg, #231a6f, #0f054c); */
+  background-color: #007bff;
 }
 
 .sub_page .hero_area .hero_bg_box {
   display: none;
 }
-
+/* 
 .header_section {
   padding: 15px 0;
-}
+} */
 
 .header_section .container-fluid {
   padding-right: 25px;
