--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   /* --primary: #09ba65; */
   --primary: #0080FF;
   --secondary: #09ba65;
+  --btn-hover: #0000e8;
 }
 
 body {
@@ -198,7 +199,8 @@ a:focus {
 
 .custom_nav-container .navbar-nav .nav-item:hover .nav-link, .custom_nav-container .navbar-nav .nav-item.active .nav-link {
   /* color: #00bbf0; */
-  color: rgb(200, 207, 255);
+  /* color: rgb(183, 193, 255); */
+  color: rgb(194, 1, 1);
 }
 
 .custom_nav-container .navbar-nav .nav-item.active .nav-link {
@@ -336,7 +338,7 @@ a:focus {
 .slider_section .detail-box .btn-box .btn1 {
   display: inline-block;
   padding: 10px 15px;
-  background-color: #00bbf0;
+  background-color: var(--primary);
   color: #ffffff;
   border-radius: 0;
   -webkit-transition: all 0.3s;
@@ -345,7 +347,7 @@ a:focus {
 }
 
 .slider_section .detail-box .btn-box .btn1:hover {
-  background-color: #048b4a;
+  background-color: var(--btn-hover)
 }
 
 .slider_section .detail-box .btn-box .btn2 {
@@ -510,7 +512,7 @@ a:focus {
 .service_section .btn-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #00bbf0;
+  background-color: var(--primary);
   color: #ffffff;
   border-radius: 0;
   -webkit-transition: all 0.3s;
@@ -519,7 +521,7 @@ a:focus {
 }
 
 .service_section .btn-box a:hover {
-  background-color: #048b4a;
+  background-color: var(--btn-hover);
 }
 /* pricing start */
 .pricing-section button:focus{
@@ -541,6 +543,9 @@ a:focus {
 /* .pricing-hero{
  background:url(../images/pricing-hero.jpg);
 } */
+.nav-tabs .active{
+  border: 1px solid var(--primary) !important;
+}
 .about_section {
   /* background-color: var(--primary); */
   color: #000;
@@ -574,7 +579,7 @@ a:focus {
 .about_section .detail-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #00bbf0;
+  background-color: var(--primary);
   color: #ffffff;
   border-radius: 0px;
   -webkit-transition: all 0.3s;
@@ -584,7 +589,7 @@ a:focus {
 }
 
 .about_section .detail-box a:hover {
-  background-color: #048b4a;
+  background-color: var(--btn-hover);
 }
 /* payment gatway */
 .payment-getway img{
@@ -652,7 +657,7 @@ a:focus {
 .why_section .btn-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #00bbf0;
+  background-color: var(--primary);
   color: #ffffff;
   border-radius: 0;
   -webkit-transition: all 0.3s;
@@ -661,7 +666,7 @@ a:focus {
 }
 
 .why_section .btn-box a:hover {
-  background-color: #048b4a;
+  background-color: var(--btn-hover);
 }
 
 /*** Team ***/
@@ -672,15 +677,15 @@ a:focus {
 }
 
 .team-item:hover {
-    border-color: var(--secondary) !important;
+    border-color: var(--btn-hover) !important;
 }
 
 .team-item:hover .bg-primary {
-    background: var(--secondary) !important;
+    background: var(--btn-hover) !important;
 }
 
 .team-item:hover .bg-primary i {
-    color: var(--secondary) !important;
+    color: var(--btn-hover) !important;
 }
 
 
